[package]
name = "hyperbolic-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"

# Build dependencies (the engine) with optimizations even in dev so the
# renderer runs smoothly, while keeping our own crate quick to recompile.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
